--- a/R/4_DensityRegression_Overview.rmd
+++ b/R/4_DensityRegression_Overview.rmd
@@ -35,7 +35,8 @@ main_data <- main_data %>% select(perc_av_gk, perc_av_gk_sc, gkclasstype, gkschi
 2. Comments
 
 At this point we concentrate the analysis on student percentiles for average scores in kindergarten, with the following variables of interest:
-- 5764 observations of students scores: `perc_av_gk`
+
+- 5764 observations of students score percentiles: `perc_av_gk`
 - 320 `classes`
 - 79 `schools`
 - 3 `classtypes` with levels *SMALL*, *REG* and *wAid*
@@ -43,18 +44,18 @@ At this point we concentrate the analysis on student percentiles for average sco
 
 ### Data Review (Histograms)
 
-We show histogram for percentiles given Grade and Class Size:
+A simple approach of visualizing group differences in distribution is to plot respective histograms. Following the histograms for percentiles given grade and class size are shown:
 
 ```{r echo=TRUE}
 smallClassesGK <- main_data %>% 
-  select(perc_av_gk_sc, gkclasstype) %>% 
-  filter(gkclasstype=="SMALL CLASS" & !is.na(perc_av_gk_sc)) 
+  select(perc_av_gk, gkclasstype) %>% 
+  filter(gkclasstype=="SMALL CLASS" & !is.na(perc_av_gk)) 
 regClassesGK <- main_data %>% 
-  select(perc_av_gk_sc, gkclasstype) %>% 
-  filter(gkclasstype=="REGULAR CLASS" & !is.na(perc_av_gk_sc)) 
+  select(perc_av_gk, gkclasstype) %>% 
+  filter(gkclasstype=="REGULAR CLASS" & !is.na(perc_av_gk)) 
 regAidClassesGK <- main_data %>% 
-  select(perc_av_gk_sc, gkclasstype) %>% 
-  filter(gkclasstype=="REGULAR + AIDE CLASS" & !is.na(perc_av_gk_sc)) 
+  select(perc_av_gk, gkclasstype) %>% 
+  filter(gkclasstype=="REGULAR + AIDE CLASS" & !is.na(perc_av_gk)) 
 
 # we want to filter the dataset for each class
 groupList <- unique(main_data$gkclasstype)
@@ -64,51 +65,53 @@ groupList <- unique(main_data$gkclasstype)
 
 ```{r echo=TRUE}
 par(mfrow = c(1,3))
-h1 <- hist(smallClassesGK$perc_av_gk_sc, plot=F, breaks = 20)
+h1 <- hist(smallClassesGK$perc_av_gk, plot=F, breaks = 20)
 h1$counts <- h1$counts / sum(h1$counts)
-plot(h1, freq=TRUE, ylab="Relative Frequency", ylim = c(0,0.2))
-h2 <- hist(regClassesGK$perc_av_gk_sc, plot = F, breaks = 20)
+plot(h1, freq=TRUE, ylab="Relative Frequency", ylim = c(0,0.10))
+h2 <- hist(regClassesGK$perc_av_gk, plot = F, breaks = 20)
 h2$counts <- h2$counts / sum(h2$counts)
-plot(h2, freq=TRUE, ylab="Relative Frequency", ylim = c(0,0.2))
-h3 <- hist(regAidClassesGK$perc_av_gk_sc, plot = F, breaks = 20)
+plot(h2, freq=TRUE, ylab="Relative Frequency", ylim = c(0,0.10))
+h3 <- hist(regAidClassesGK$perc_av_gk, plot = F, breaks = 20)
 h3$counts <- h3$counts / sum(h3$counts)
-plot(h3, freq=TRUE, ylab="Relative Frequency", ylim = c(0,0.2))
+plot(h3, freq=TRUE, ylab="Relative Frequency", ylim = c(0,0.10))
 
 ```
 
-After controlling for school effects, the small Class effect is stronger, while the Aid effect is weaker.
 
-### Show group specific densities (later: with different grades in color)
+
+### Show group specific densities
 
 ```{r echo=TRUE}
 # make a list to store all densities
-SizeTypeDensities_sc <- vector("list", length = length(groupList)-1)
+SizeTypeDensities <- vector("list", length = length(groupList)-1)
 # ignore first value of List since it is NA
 for (i in 2:length(groupList)){
   temp <- main_data %>% 
-    select(gkclasstype, perc_av_gk_sc) %>% 
+    select(gkclasstype, perc_av_gk) %>% 
     filter(gkclasstype==groupList[i])
-  SizeTypeDensities_sc[[i-1]] <- kdensity(temp$perc_av_gk_sc, start = "gumbel", kernel = "beta_biased", na.rm = T, bw = 0.3)}  
+  SizeTypeDensities[[i-1]] <- kdensity(temp$perc_av_gk, start = "uniform", kernel = "beta_biased", support = c(0,1), na.rm = T, bw = 0.05)}  
 par(mfrow = c(1,3))
-plot(SizeTypeDensities_sc[[1]], ylim = c(0,1.4), main = "with Aid")
-plot(SizeTypeDensities_sc[[2]], ylim = c(0,1.4), main = "Small Classes")
-plot(SizeTypeDensities_sc[[3]], ylim = c(0,1.4), main = "Regular Classes")
+plot(SizeTypeDensities[[2]], ylim = c(0.5,1.5), main = "Small Classes")
+plot(SizeTypeDensities[[3]], ylim = c(0.5,1.5), main = "Regular Classes")
+plot(SizeTypeDensities[[1]], ylim = c(0.5,1.5), main = "with Aid")
 
 ```
 
-It seems strange that the data becomes less clear after we control for school-fixed effects (maybe problematic that we first compute percentiles on a school level and afterward looking for effects on a more general level?)
+So far we only implemented a more or less arbitrary bandwidth which produced satisfying results. This should be replaced by a well founded procedure. 
+
+A uniform start distribution is chosen due to the estimation procedure of percentiles.
 
 
 ## Density estimation
 
 The first step is built on the theoretical assumptions that the observed student score percentiles are realizations of an underlying conditional density function. Or in other words we observe the conditional distributions of **class specific densities** (relative performance of students) in their discrete form (cp. Talska et al. 2018). We want to estimate a density function for each **group of interest** or partition of the observational space given the available covariates. For the most simple model at kindergarten level this would be $79*3=237$ densities.
 
-One big adventage of the distributional perspective is that enables the researcher to analyse the whole distribution of the response instead of being focus on distributional parameters like the mean of a distribution (Talska 2018,p.67)
+One big advantage of the distributional perspective is that it enables the researcher to analyze the whole distribution of the response instead of being focus on single distributional parameters like the mean of a distribution (Talska 2018,p.67)
 
 In addition, there are several parameters for kernel estimation that we need to tune carefully (see `?kdensity`):
 
-- optimal bandwidth: so far user supplied
-- parametric start: "gumbel"
+- optimal bandwidth: **so far user supplied**
+- parametric start: "uniform"
 - kernel: "beta_biased" as the recommended bias-corrected kernel for use on unit interval
 
 Estimation:
@@ -132,8 +135,8 @@ for (i in 1:length(vecIdent)){
   temp <- main_data %>% 
     select(school_by_type, perc_av_gk, perc_av_gk_sc) %>% 
     filter(school_by_type==vecIdent[i])
-  densities[[i]] <- kdensity(temp$perc_av_gk, start = "gumbel", kernel = "beta_biased", bw = 0.15)
-  densities_sc[[i]] <- kdensity(temp$perc_av_gk, start = "gumbel", kernel = "beta_biased", bw = 0.15)
+  densities[[i]] <- kdensity(temp$perc_av_gk, start = "uniform", kernel = "beta_biased", bw = 0.1)
+  densities_sc[[i]] <- kdensity(temp$perc_av_gk, start = "uniform", kernel = "beta_biased", bw = 0.1)
   }  
 ```
 
@@ -149,17 +152,18 @@ for (i in 2:length(densities)){
 }
 ```
 
-At this point, we are not able to identify a clear picture.
+At this point, we are not able to identify a clear picture. But we do see that extremely high densities are exclusively located in the lowest quantile of the percentile distribution.
 
 ## Covariates
 
 
-Following a first density-on-scalar estimation for the STAR data is represented.
-So far the model only accounts for (well known) effects of assigned classtypes amd only analyses students in kindergarten.
+Following, a first density-on-scalar estimation for the STAR data is represented.
+So far the model only accounts for (well known) effects of assigned classtypes and only analyses students in kindergarten.
 
 We use data that consists of a list of
+
 - the densities (kernel estimation from chapter 3) for the percentiles for average score results for students in kindergarten evaluated at 100 equidistant points
-- a vector of evaluation points that were used to retrieve observation points for the densities
+- a vector of evaluation points that were used to retrieve observation points from the estimated densities
 - a vector of classtypes with levels: "SMALL", "Reg", "wAid"
 - a dummy vector indicating the assignment of a SMALL class
 - a vector of school specific indicators with 79 levels
@@ -218,20 +222,16 @@ for (i in 1:length(densities)){
 
 ## Clr Transformation
 
-Theoretically we must transform our densities, which are elements of an **Bayes Hilbert Space** into **L2** (See Eva Maria Maier, p.14) to be able to perform function-on-scalar regression: 
+Theoretically we must transform our densities, which are elements of an **Bayes Hilbert Space** into the usual space for functional analysis: **L2** (See Eva Maria Maier, p.14). After this transformation we are able to perform function-on-scalar regression: 
 $$
 \operatorname{clr}_{\lambda}\left[f_{\mu}\right]:=\log f_{\mu}-\frac{1}{\lambda(\mathcal{T})} \cdot \int_{\mathcal{T}} \log f_{\mu} \mathrm{d} \lambda
 $$
 
-Since we evaluate the densities along a vector of equidistant points this transformation corresponds to the discrete clr-transformation of compositional variables (See Boogart et al. 2013, p.41, Talska 2018, p. 70):
-$$
-\operatorname{clr}(\mathbf{x})=\left(\ln \frac{x_{i}}{g(\mathbf{x})}\right)_{i=1, \ldots, D} \quad \text { with } \quad g(\mathbf{x})=\sqrt[D]{x_{1} \cdot x_{2} \cdots x_{D}}
-$$
-With $D$ being the number of equidistant evaluation points. Since we want to avoid taking logarithms of value zero, we choose our equidistant points from the closed interval $[0.001,0.999]$.
+Since we evaluate the densities along a vector of equidistant points this transformation corresponds to the discrete clr-transformation of compositional variables (See Boogart et al. 2013, p.41, Talska 2018, p. 70).
 
-**Choosing the number of evaluation points is not trival as it relates to parameters for smooth representation of the clr transformed variables (see Talska 2018, p.71). However, this is not relevant in our case since we do an estimation procedure that is built on discrete realisations of the functional response in L2 anyway and therefore we can use the discrete transformed values directly.** 
+Since we want to avoid taking logarithms of value zero, we choose our equidistant points from the closed interval $[0.001,0.999]$.
 
-To put it more simply, when we evaluate our densities at quidistant points we get "quasi" compositional data. Then we proceed in the compositional framework. Aa this is the most straight forward framework, more complex estimation procedures are proposed (see Talska 2018).
+To put it more simply, when we evaluate our densities at equidistant points we get "quasi" compositional data. Then we proceed within the compositional framework. Although this is the most straight forward framework, more complex estimation procedures are proposed (see Talska 2018).[is this correct??]
 
 We can easily transform the vector of evaluation points by the `clr` command from Boogarts et al. `composition` R add on package. 
 
@@ -254,7 +254,7 @@ star <- list(Den_gk = clrDenMatrix_1,
              evPoints = eqdist,
              densityID = vecIdent,
              ClassType = listObjClasstype,
-             ClassDummy = as.double(dummyClasstype),
+             ClassDummy = as.factor(dummyClasstype),
              School = listObjSchool) 
 
 # save list as it is the core data for further analysis
@@ -265,7 +265,7 @@ save(star, file = "functionalData.RData")
 
 ## Representation of clr-transformed densities
 
-At first, we can plot all class-specific densities into one plot and for specific groups. There are a few extreme classes with extremly skewed distrinutions to their left tails. To make the plots more relatable we restrict the y-axis for the group specific plots on values between -50 and 50 log ratios.
+At first, we can plot all class-specific densities into one plot and for specific groups. There are a few extreme classes with extremely skewed distributions to their left tails. To make the plots more reliable we restrict the y-axis for the group specific plots on values between -20 and 15 for the centered log ratios.
 
 
 ```{r echo=TRUE}
@@ -273,36 +273,35 @@ At first, we can plot all class-specific densities into one plot and for specifi
 depDens <- star$Den_gk_sc
 evPoints <- star$evPoints
 classType <- star$ClassType
-plot(evPoints,as.double(depDens[1,]), type="l", ylim = c(-80,80), col = colVec[1])
-legend("bottomright", legend=c("SMALL", "REG", "wAID"), pch=16,col=unique(colVec))
+plot(evPoints,as.double(depDens[1,]), type="l", ylim = c(-20,15), col = colVec[1])
+legend("topright", legend=c("SMALL", "REG", "wAID"), pch=16,col=unique(colVec))
 for (i in 2:nrow(depDens)){
   lines(evPoints,as.double(depDens[i,]), type="l", col=colVec[i])
 }   
 ```
 
-There are a few "extreme" classes with an extreme underrepresentation of students with very low percentile ranks and those are SMALL classes. We expect them to influence the regression model quite a lot. We can also see that the clr-transformation seems to represent the relational structure of the data much better then the original densities as seen above. 
+There are a few classes with a relative underrepresentation of students with very low percentile ranks and those are SMALL classes. **We expect them to influence the regression model quite a lot.** The same can be expected for the few (two) regular classes with strong underrepresentation within the top quantile. We can also see that the clr-transformation seems to represent the relational structure of the data much better then the original densities as seen above. 
 
 
 
 ```{r echo=TRUE}
 par(mfrow = c(1,3))
 subDepDens <- depDens[classType=="SMALL",]
-plot(evPoints,as.double(subDepDens[1,]), type="l", ylim = c(-50,50), main="Small classes")
+plot(evPoints,as.double(subDepDens[1,]), type="l", ylim = c(-20,15), main="Small classes")
 for (i in 2:nrow(subDepDens)){
-  lines(evPoints,as.double(subDepDens[i,]), type="l", ylim = c(-50,50))
+  lines(evPoints,as.double(subDepDens[i,]), type="l", ylim = c(-20,15))
 }    
 subDepDens <- depDens[classType=="Regular",]
-plot(evPoints,as.double(subDepDens[1,]), type="l", ylim = c(-50,50), main="Reg classes")
+plot(evPoints,as.double(subDepDens[1,]), type="l", ylim = c(-20,15), main="Reg classes")
 for (i in 2:nrow(subDepDens)){
-  lines(evPoints,as.double(subDepDens[i,]), type="l", ylim = c(-50,50))
+  lines(evPoints,as.double(subDepDens[i,]), type="l", ylim = c(-20,15))
 }   
 subDepDens <- depDens[classType=="wAid",]
-plot(evPoints,as.double(subDepDens[1,]), type="l", ylim = c(-50,50), main="with Aides")
+plot(evPoints,as.double(subDepDens[1,]), type="l", ylim = c(-20,15), main="with Aides")
 for (i in 2:nrow(subDepDens)){
-  lines(evPoints,as.double(subDepDens[i,]), type="l", ylim = c(-50,50))
+  lines(evPoints,as.double(subDepDens[i,]), type="l", ylim = c(-20,15))
 }   
 ```
-It appears that all extreme classes are classes of the subset of small classes and therefor we can expect that this influences a mean regression procedure quite heavily.
 
 
 The amount of variation for regular classes is much smaller than for SMALL classes, but again this is probably heavily influenced by the extreme classes. It might be a good idea to check other loss functions (e.g. absolute error).
@@ -317,29 +316,29 @@ Starting with the regression of (school-specific) class densities onto the class
 
 $$
 \begin{array}{l}
-\operatorname{clr}\left[\hat{f}_{\text {school, classtype, grade=kindergarten }}\right]=\operatorname{clr}\left[\beta_{0}\right]+\operatorname{clr}\left[\beta_{\text {SMALL }}\right] \cdot \mathbb{1}_{\text {reg_small=small}}(\text { classtype })+\operatorname{clr}\left[\beta_{\text {classtype }}\right] \\
-\quad+\operatorname{clr}\left[\beta_{\text {school }}\right]+\operatorname{clr}[g(\text { school})]+\operatorname{clr}\left[\varepsilon_{\text {region, child group, year }}\right]
+\operatorname{clr}\left[\hat{f}_{\text {school, classtype, grade=kindergarten }}\right]=\operatorname{clr}\left[\beta_{0}\right]+\operatorname{clr}\left[\beta_{\text {classtype }}\right]+\operatorname{clr}\left[\varepsilon_{\text {region, child group, year }}\right]
 \end{array}
 $$
 
-### Linear Effect of ClassType
+## Regression: Linear Effects of ClassType
 
-We use the component-wise gradient boosting algorithm (cp. Eva Maria Maier) implemented in the `FDboost` add on package (Brockhaus, 2020). 
+We use the *component-wise gradient boosting algorithm* (cp. Eva Maria Maier) implemented in the `FDboost` add on package (Brockhaus, 2020) to calculate linear effects for the three factors of the `classtype` covariate. 
 
-There is a set of parameters that need clearification:
+There is a set of parameters that need clarification:
+
 - penalization parameter
   + degrees of freedom
     + default is 4 (Hofner 2014, p.13)
-  + lambda (is computed automatically if df is pecified) (default: $trace(2S − S T S)$)
+  + lambda (is computed automatically if df is specified) (default: $trace(2S − S T S)$)
 - type of effect (linear or smooth) / specification of base learners (Overview: Brockhaus 2020,p.7, 26)
 - offset values (default: `offset=NULL`)
 - optimal stopping iteration (use `cvrisk`)
 - loss function / `family`
 - step length
 
-We use `bolsc` to estimate the model with ridge-penalized linear effects for classtype and a centered design matrix such the the linear effect is centered around zero (Brockhaus 2020,p.17, Hofner 2014, p.12ff). `bols` can be used for continues and categorical covariates.
+We use `bols` to estimate the model with ridge-penalized linear effects for classtype (Brockhaus 2020,p.17, Hofner 2014, p.12ff). `bols` can be used for continues and categorical covariates.
 
-Since the covariate effect is represented as a Kronecker product of two marginal bases (Brockhaus 2020), we combine a linear base learner (`bols`) with a smooth effect by P-splines over all evaluation points of the dependent densties (`bbs`) (Hofner 2014, p. 16). 
+Since the covariate effect is represented as a Kronecker product of two marginal bases (Brockhaus 2020), we combine a linear base learner (`bols`) with a smooth effect estimated by P-splines over all evaluation points of the dependent densities (`bbs`) (Hofner 2014, p. 16). 
 ```{r echo=TRUE}
 mod0 <- FDboost(Den_gk ~ 1,
                timeformula = ~ bbs(evPoints, df = 4),
@@ -361,11 +360,40 @@ mod1 <- FDboost(Den_gk ~ 1 + bols(ClassType, intercept = T, df = 4),
 mod1c <- FDboost(Den_gk ~ 1 + bols(ClassDummy, df = 4),
                timeformula = ~ bbs(evPoints),
                offset = "scalar", data = star)
+mod1d <- FDboost(Den_gk ~ 1 + bols(ClassDummy, df = 4) +  bols(classType, df = 4) ,
+               timeformula = ~ bbs(evPoints),
+               offset = "scalar", data = star)
 # coefficients are evaluated at 24 points, which can be retrieved
 
 
-par(mfrow = c(1,2))
-plot(mod1, which = 1, main = "Smooth intercept model")
-plot(mod1, which = 2, main = "Linear effects of classtype")
-legend("bottomright", legend=c("SMALL", "REG", "wAID"), pch=16,col=unique(colVec))
+
+plot(mod1, which = 1, main = "Intercept model", ylim = c(-1,1))
+```
+
+The Intercept model can be interpreted as the mean (clr)-density (which is not a density since values are still elements of L2 and need to be backtransformed into the Bayes Hilbert Space). The result corresponds to our expectation given the estimation procedure of the student percentiles. 
+
+```{r echo=TRUE}
+plot(mod1, which = 2, main = "Linear effects of classtype", ylim = c(-1,1))
+legend("topright", legend=c("wAid", "REG", "SMALL"), pch=16,col=unique(colVec))  
+
+```
+
+The clr-trsanformed coefficients of the three classtypes shows that SMALL classes have lower (clr)-densities for [.,0.5]-percentiles compared to the other two classtypes.
+
+
+
+```{r echo=TRUE}
+# plot(mod1c, which = 2, main = "Linear effects of indicator for SMALL class", ylim = c(-1,1))
+# legend("bottomright", legend=c("OTHER", "SMALL"), pch=16,col=unique(colVec))  
+
+```
+
+
+
+```{r echo=TRUE}
+# convert the coefficients from L2 into Bayes Space
+# origCoeff <- mod1$coef(which = 2)
+# origCoeff2 <- mod1$coef()$`"bols(ClassType, intercept = T, df = 4) %O% bbs(evPoints)"`
+# transfCoeff <- clrInv(origCoeff)
+
 ```
